<resources>
    <string name="app_name">ClassRoom</string>
    <string name="about_the_video">About the video</string>
    <string name="about_the_artist">About the Artist</string>
    <string name="todo">TODO</string>
    <string name="maths">Maths</string>
    <string name="english">English</string>
    <string name="science">Science</string>
    <string name="social_science">Social Science</string>
    <string name="hindi">Hindi</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="username">USERNAME</string>
    <string name="drawer_open" />
    <string name="drawer_close" />
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="classroom">CLASSROOM</string>
    <string name="log_in">LOG IN</string>
    <string name="dont_have_an_account">Don\'t have an Account?</string>

    <string name="thumbnail_image_view_desc">Youtube Video thumbnail image view</string>
    <string name="close_player_activity">Close Player activity</string>
    <string name="_24_33min">24.33min</string>
    <string name="play">play</string>

    <string-array name="video_id_array">
        <item>NCjf6og4qHk</item>
        <item>z-R3DShHbkA</item>
        <item>e-P5IFTqB98</item>
        <item>jEqx1kwgt2E</item>
        <item>grkWGeqW99c</item>
        <item>OmJ-4B-mS-Y</item>
        <item>Ms6qzk6-prU</item>
        <item>6kSsuTnGPh4</item>
        <item>IhQt_fxGOcw</item>

    </string-array>

    <string-array name="video_title_array">
        <item>29 SCIENCE TRICKS that look like real MAGIC</item>
        <item>EASY SCIENCE EXPERIMENTS</item>
        <item>Black Holes Explained – From Birth to Death</item>
        <item>5 Math Tricks That Will Blow Your Mind</item>
        <item>The magic of Vedic math - Gaurav Tekriwal</item>
        <item>The Map of Mathematics</item>
        <item>Words not coming to mind when speaking English</item>
        <item>ALL the ENGLISH BASICS you need</item>
        <item>Spoken English Leaning Video Conversation</item>

    </string-array>

    <string-array name="video_artist_array">
        <item>5-MINUTE MAGIC</item>
        <item>Crafts for Kids</item>
        <item>Kurzgesagt– In a Nutshell</item>
        <item>Maths is Easy</item>
        <item>TED-Ed</item>
        <item>DoS - Domain of Science</item>
        <item>AleenaRaisLive</item>
        <item>linguamarina</item>
        <item>Heaven Luk</item>

    </string-array>

    <string-array name="video_duration_array">
        <item>14:09</item>
        <item>06:09</item>
        <item>05:56</item>
        <item>05:06</item>
        <item>09:45</item>
        <item>11:06</item>
        <item>10:57</item>
        <item>36:13</item>
        <item>20:43</item>
    </string-array>
</resources>