<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/teacher"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_icon"
        android:layout_centerHorizontal="true"
        android:text="@string/classroom"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_icon"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:autofillHints="@string/email"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="#000000"
        android:textSize="22sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/password"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="22sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/inputs"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/no_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/dont_have_an_account"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold" />



</RelativeLayout>