<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorPrimary">
    
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/register_icon"
        android:layout_centerHorizontal="true"
        android:src="@drawable/teacher"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_icon"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:text="@string/classroom"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_icon"
        android:layout_centerInParent="true"
        android:layout_marginTop="70dp"
        android:autofillHints="@string/email"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="#000000"
        android:textSize="22sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_name"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/email"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="#000000"
        android:textSize="22sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/password"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="22sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/confirm_password"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="22sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/register_create_account"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/inputs"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>