<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:padding="5dp"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardElevation="15dp"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="#ffffff"
    android:elevation="5dp"
    app:cardCornerRadius="23dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/child_video_image"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:background="@color/colorPrimary"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/child_video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/child_video_image"
            android:fontFamily="serif"
            android:paddingTop="10dp"
            android:text="@string/about_the_video"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#333333" />

        <TextView
            android:id="@+id/child_video_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/child_video_title"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@id/child_video_image"
            android:fontFamily="serif"
            android:text="@string/about_the_artist"
            android:textColor="#333333" />


    </RelativeLayout>



</androidx.cardview.widget.CardView>